Remove errors and run tests

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -132,7 +132,7 @@
       <h2 id="fillings">fillings: <span>{{order.fillings}}</span></h2>
       <h2 id="size">pancake count: <span>{{order.size}}</span></h2>
       <!-- Fix the header below -->
-      <h2 id="pickUp">drop off time: <span>{{order.pickUp}}</span></h2>
+      <h2 id="pickUp">pick up time: <span>{{order.pickUp}}</span></h2>
     </div>
   </div>
 
